新增PLC Modbus通信与机械手步进控制模块，更新相机/发药配置，补充协议文档